# UXAgent

./: .gitignore  observe_10_clean.html  observe_10_raw.html  observe_10_summary.txt  observe_11_clean.html  observe_11_raw.html  observe_11_summary.txt  observe_12_clean.html  observe_12_summary.txt  observe_13_raw.html  observe_13_summary.txt  observe_14_raw.html  observe_14_summary.txt  observe_15_clean.html  observe_1_clean.html  observe_1_home_clean.html  observe_1_home_raw.html  observe_1_home_summary.txt  observe_1_raw.html  observe_1_summary.txt  observe_2_clean.html  observe_2_product_clean.html  observe_2_product_raw.html  observe_2_product_summary.txt  observe_2_raw.html  observe_2_summary.txt  observe_3_checkout_clean.html  observe_3_checkout_raw.html  observe_3_checkout_summary.txt  observe_3_clean.html  observe_3_raw.html  observe_3_summary.txt  observe_4_clean.html  observe_4_raw.html  observe_4_summary.txt  observe_4_thankyou_clean.html  observe_4_thankyou_raw.html  observe_4_thankyou_summary.txt  observe_5_clean.html  observe_5_raw.html  (+17 more)
docs/: 2025.11.13.md  browser_module.md
logs/: run_20251113_013856.jsonl  run_20251113_015051.jsonl  run_20251113_020226.jsonl  run_20251113_020810.jsonl  run_20251113_020822.jsonl  run_20251113_021241.jsonl  run_20251113_022621.jsonl  run_20251113_024145.jsonl  run_20251113_024352.jsonl  run_20251113_024443.jsonl  run_20251113_025229.jsonl  run_20251113_025640.jsonl  run_20251113_025755.jsonl  run_20251113_025934.jsonl  run_20251113_030305.jsonl  run_20251113_030329.jsonl  run_20251113_030337.jsonl  (+21 more)
src/uxagent/: main.py  (+2 more)
